# PLL_paper

./: .gitignore  CITATION.cff  LICENSE  Makefile  PAPER.md  README.md  REPRODUCIBILITY.md  pyproject.toml
data/: sem_mask_train.jsonl  texts.jsonl
figs/: geometry_summary.csv  manifest.json  pac_summary.csv  piecewise_psps_summary.csv  piecewise_psps_tiles.csv  pla_ablation.csv
models/decoder_v2/: decoder.pt  decoder_config.json  metrics.txt
runs/: apc_after.json  apc_before.json  geometry_probe_full_0_6_11.json  piecewise_sps_l0_mlp_down.json  piecewise_sps_l0_mlp_gate.json  piecewise_sps_l0_mlp_up.json  report.md
runs/pla/: apc_before_after.json  geometry_before_after.json  train_progress.jsonl  train_summary.json
runs/pla_l0_o_h8_n7_mu002_l015_steps600_all/: apc_after.json  apc_before_after.json  geometry_before_after.json  train_progress.jsonl  train_summary.json
runs/pla_l0_v_h3_n7_mu001_l010_steps200_oonly/: apc_before_after.json  train_progress.jsonl  train_summary.json
runs/pla_l0_v_h3_n7_mu001_l010_steps600_oonly/: apc_before_after.json  geometry_before_after.json  train_progress.jsonl  train_summary.json
runs/pla_l0_v_h3_n7_mu002_l015_steps300_all/: apc_before_after.json  train_progress.jsonl  train_summary.json
scripts/: extract_piecewise_sps.py  geometry_probe.py  make_geometry_figs.py  make_pac_figs.py  make_piecewise_psps_figs.py  make_pla_ablation_figs.py  make_report.py  render_geometry_plots.py  render_pac_plots.py  render_pla_plots.py  render_psps_plots.py  summarize_piecewise_sps.py
src/pll/: __init__.py  eval_pla_apc.py  pac_audit.py  (+7 more)
